# modelpoison

./: .gitignore  README.md  content.txt  generate_attack_vectors.py  generate_report.py  ml_attack_vectors.json  pyproject.toml  requirements.txt
attack_vector/tensorflow_vectors/custom_gradient_injection_savedmodel/: fingerprint.pb  saved_model.pb
attack_vector/tensorflow_vectors/custom_op_ops/: fingerprint.pb  saved_model.pb
attack_vector/tensorflow_vectors/env_var_access_ops/: fingerprint.pb  saved_model.pb
attack_vector/tensorflow_vectors/file_read_write_ops_savedmodel/: fingerprint.pb  saved_model.pb
attack_vector/tensorflow_vectors/protobuf_deserialization_savedmodel/: fingerprint.pb  saved_model.pb
attack_vector/tensorflow_vectors/shell_command_ops/: fingerprint.pb  (+1 more)
backup/: generate_attack_vectors.py  generate_report.py
docs/: CHEATSHEET.md  CVE_AND_VULNERABILITIES.md  ml_attack_vectors.md  ml_cve.md
generators/: README.md  __init__.py  advanced_pickle_obfuscation_vectors.py  advanced_weight_poisoning_vectors.py  archive_vectors.py  config_vectors.py  flax_jax_vectors.py  gguf_vectors.py  jinja2_bypass_vectors.py  joblib_vectors.py  keras_vectors.py  numpy_vectors.py  onnx_vectors.py  openvino_vectors.py  orchestrator.py  paddlepaddle_vectors.py  pickle_vectors.py  pmml_vectors.py  pytorch_vectors.py  safetensors_vectors.py  supply_chain_attack_vectors.py  tensorflow_vectors.py  tensorrt_vectors.py  tflite_vectors.py  xgboost_vectors.py
modelpoison/: __init__.py  cli.py  report.py
scanner_reports/modelaudit/: modelaudit.json  report.md
(+18 files in other folders)
